<resources>
    <string name="app_name">Work-it-out</string>
    <!-- WorkoutFragment -->
    <string name="title_workout">WORKOUT</string>
    <string name="title_single_workout">Single Workout Title</string>


    <!-- TabataFragment -->
    <string name="title_tabata">TABATA</string>

    <!-- NutritionFragment -->
    <string name="title_nutrition">NUTRITION</string>

    <!--StatsFragment -->
    <string name="title_stats">STATS</string>

    <!-- ProfileFragment -->
    <string name="title_profile">PROFILE</string>
    <string name="user_placeholder">User</string>
    <string name="btn_logout">Logout</string>
    <string name="content_descriptor_profile_picture">Profile picture image</string>

    <!-- SignInFragment -->
    <string name="title_signin">Sign In</string>
    <string name="btn_signin">Sign In</string>
    <string name="si_goto_signup">Create an account</string>

    <!-- SignUpFragment -->
    <string name="title_signup">Sign Up</string>
    <string name="btn_signup">Sign Up</string>

    <!-- General strings -->
    <string name="fab_content_descriptor_settings">settings symbol</string>
    <string name="fab_content_descriptor_add">add symbol</string>
    <string name="fab_content_descriptor_filter">filter symbol</string>
    <string name="btn_content_descriptor_back_arrow">back arrow</string>

    <!-- Hint strings -->
    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="workout_placeholder_name">Workout Name</string>
    <string name="workout_placeholder_description">Workout Description\nFirst you have to do...\nThen repeat..\And another set of...\n...\n...\n...\n...\n...\n...\n...\n...\n...\n...\n...\n...\n...\n...\n...\nTest</string>
    <string name="content_descriptor_workout_list_image">Workout list image</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout_placeholder_id">987</string>
    <string name="workout_category">Workout Category</string>
    <string name="like_icon">like icon</string>


</resources>