<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_workout"
        android:icon="@drawable/ic_dumbbell_24"
        android:title="@string/title_workout" />

    <item
        android:id="@+id/navigation_tabata"
        android:icon="@drawable/ic_baseline_timer_24"
        android:title="@string/title_tabata" />

    <item
        android:id="@+id/navigation_nutrition"
        android:icon="@drawable/ic_food_apple_24"
        android:title="@string/title_nutrition" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_chart_timeline_variant_24"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />

</menu>